# weekly-demo

server/: Makefile  manage.py  mypy.ini  pyproject.toml
server/project/: asgi.py  urls.py  wsgi.py
server/project/settings/: base.py  local.py  production.py
web/: .prettierrc  .stylelintrc.js  README.md  angular.json  eslint.config.js  package-lock.json  package.json  tsconfig.json
web/projects/portal-weekly-demo/: README.md  eslint.config.js  ng-package.json  package.json  tsconfig.lib.json  tsconfig.spec.json
web/projects/portal-weekly-demo/app/src/: public-api.ts
web/projects/portal-weekly-demo/app/src/lib/: portal-weekly-demo.app.ts  portal-weekly-demo.component.spec.ts  portal-weekly-demo.component.ts  portal-weekly-demo.routes.ts  provider.ts
web/projects/portal-weekly-demo/features/src/: public-api.ts
web/projects/portal-weekly-demo/features/src/lib/cool-feature/: cool-feature.ts
web/projects/portal-weekly-demo/i18n/src/: ar.json  en_GB.json  loader.ts  public-api.ts
web/projects/portal-weekly-demo/src/: public-api.ts
web/projects/portal-weekly-demo/src/lib/: extensions.ts
web/src/: enabled-apps.ts  events.ts  extensions.ts  index.html  main.ts
web/src/environments/: environment.development.ts  environment.production.ts  types.ts
